--- a/actix-signal/Cargo.toml
+++ b/actix-signal/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "actix-signal"
 version = "0.1.0"
+authors = ["LightQuantum <self@lightquantum.me>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Manage the lifecycle of an actix actor with its address."
+license = "MIT"
+keywords = ["actix", "actor", "lifecycle", "signal", "stop", "terminate"]
+repository = "https://github.com/PhotonQuantum/actix-signal"
+readme = "README.md"
 
 [features]
 # Provide derive(SignalHandler) macro
@@ -11,8 +15,8 @@ derive = ["actix-signal-derive"]
 
 [dependencies]
 actix = "0.12"
-actix-signal-derive = {version="0.1", optional=true, path="../actix-signal-derive"}
+actix-signal-derive = { version = "0.1", optional = true, path = "../actix-signal-derive" }
 
 [dev-dependencies]
-actix-signal-derive = {version="0.1", path="../actix-signal-derive"}
+actix-signal-derive = { version = "0.1", path = "../actix-signal-derive" }
 actix-rt = "2.2"
